Fix Neptune icon on mobile

--- a/public/fontawesome/css/regular.bareminimum.css
+++ b/public/fontawesome/css/regular.bareminimum.css
@@ -25,7 +25,7 @@
 .fa-neptune-content {
   position: absolute;
   top: 10px;
-  right: 1px;
+  right: 5px;
   font-size: 9px;
   height: 7px;
   width: 7px;
